03_Project/src/test/resources/cocos/invalid/MissingTransition.pn
petrinet MissingTransition {

    assert l1live(T);

    place P;

    transition S:
        1 <- P
        1 -> P
}